1.0.0 (trunk):
* Changes marked with ! are type changes (not including field additions)
* ! API.{get,post,delete,patch,put} now take optional fail_handlers
* ! Token.{create,get_all,get,delete} now return _ auth_continuation Monad.t
* ! User.current_info ~token argument was made optional ?token
* ! User.info ~login argument was renamed to User.info ~user
* ! User.repositories now accepts optional ?token and does not accept ?page
* ! Pull.for_repo does not accept ?page and now returns pull Stream.t
* ! Pull.list_commits now returns commit Stream.t
* ! Pull.list_files now returns file Stream.t
* ! Milestone.for_repo does not accept ?page
* ! Milestone.for_repo now returns milestone Stream.t
* ! Release.for_repo now returns release Stream.t
* ! Issue.for_repo does not accept ?page and now returns issue Stream.t
* ! Issue.comments now returns issue_comment Stream.t
* ! Hook.for_repo now returns hook Stream.t
* ! Repo.tags now returns repo_tag Stream.t
* ! Repo.branches now returns repo_branch Stream.t
* ! Repo.refs now returns git_ref Stream.t
* ! Tag.get_tags_and_times now returns (string * string) Stream.t
* ! Gist.commits now returns gist_history Stream.t
* ! Gist.list_forks now returns git_fork Stream.t
* ! Organization.teams now returns team Stream.t
* ! Team.repositories now returns repository Stream.t
* ! repo type has been renamed repository
* ! repos type has been renamed repositories
* ! repository_forks field renamed to repository_forks_count.
* ! repository_watchers field renamed to repository_stargazers_count.
* ! repository_open_issues field renamed to repository_open_issues_count.
* ! User.repos is now User.repositories
* ! Team.repos is now Team.repositories
* ! repository_description is now optional
* ! release_name is now optional
* ! release_body is now optional
* ! new_release_name is now optional
* ! new_release_body is now optional
* ! branch_user is now optional
* ! user_info_ty field removed in favor of specific user and organization types