@@ -28,16 +28,19 @@ let scope =
   let print f s = Format.pp_print_string f (Github.Scope.string_of_scope s) in
   parse, print
 
-let rec complete_2fa = Github.(function
+let complete_2fa c =
+  let rec try_again f = Github.(Monad.(f () >>= function
   | Result auths -> return auths
-  | Auth (mode, c) ->
-    Lwt_io.printf "Enter 2FA code from '%s': " mode
+  | Two_factor mode ->
+    embed (Lwt_io.printf "Enter 2FA code from '%s': " mode)
     >>= fun () ->
-    Lwt_io.(read_line stdin)
-    >>= fun code ->
-    Github.Monad.run (c code)
-    >>= complete_2fa
-)
+    embed (Lwt_io.(read_line stdin))
+    >>= fun otp ->
+    let otp = Some otp in
+    try_again (c ?otp)
+  )) in
+  let otp = None in
+  try_again (c ?otp)
 
 (* Command definitions *)
 let list_auth user pass =
@@ -47,8 +50,7 @@ let list_auth user pass =
     >>= fun jar ->
     Passwd.get pass
     >>= fun (pass : string) ->
-    Github.(Monad.run (Token.get_all ~user ~pass ()))
-    >>= complete_2fa
+    Github.(Monad.(run (complete_2fa (Token.get_all ~user ~pass))))
     >>= fun auths ->
     lwt local = Github_cookie_jar.get_all jar in
     printf "%-13s | %-8s | %-40s | %-10s\n" "Cookie Name" "ID" "Application" "Note";
@@ -77,10 +79,11 @@ let make_auth user pass scopes note note_url client_id client_secret =
     Passwd.get pass
     >>= fun pass ->
     Github.Monad.run
-      (Github.Token.create
-         ~scopes ~note ?note_url ?client_id ?client_secret ~user ~pass ()
+      (complete_2fa
+         (Github.Token.create
+            ~scopes ~note ?note_url ?client_id ?client_secret ~user ~pass
+         )
       )
-    >>= complete_2fa
     >>= fun auth ->
     Printf.printf "Created token %d: %s\n" auth.auth_id (Github.Token.(to_string (of_auth auth)));
     return ()
@@ -93,8 +96,7 @@ let save_auth user pass id name =
     >>= fun jar ->
     Passwd.get pass
     >>= fun pass ->
-    Github.Monad.run (Github.Token.get ~user ~pass ~id ())
-    >>= complete_2fa
+    Github.Monad.run (complete_2fa (Github.Token.get ~user ~pass ~id))
     >>= fun auth ->
     lwt _ = Github_cookie_jar.save jar ~name ~auth in
     return ()
@@ -107,8 +109,7 @@ let revoke_auth user pass id =
     >>= fun jar ->
     Passwd.get pass
     >>= fun pass ->
-    Github.Monad.run (Github.Token.delete ~user ~pass ~id ())
-    >>= complete_2fa
+    Github.Monad.run (complete_2fa (Github.Token.delete ~user ~pass ~id))
     >>= fun () ->
     lwt local = Github_cookie_jar.get_all jar in
     lwt _ = Lwt_list.fold_left_s (fun jar (name,a) ->
