@@ -1,7 +1,8 @@
 1.0.0 (trunk):
 * Changes marked with ! are type changes (not including field additions)
 * ! API.{get,post,delete,patch,put} now take optional fail_handlers
-* ! Token.{create,get_all,get,delete} now return _ auth_continuation Monad.t
+* ! Token.{create,get_all,get,delete} now return _ authorization Monad.t
+* ! Token.{create,get_all,get,delete} now have additional ?otp:string argument
 * ! User.current_info ~token argument was made optional ?token
 * ! User.info ~login argument was renamed to User.info ~user
 * ! User.repositories now accepts optional ?token and does not accept ?page
@@ -49,7 +50,7 @@
 * Monad.map, Monad.(>|=), and Monad.embed : 'a Lwt.t -> 'a Monad.t added
 * Add Stream module and API.get_stream function for paginated responses (#46)
 * git-jar now supports 2FA (#38)
-* Github.auth_continuation type added
+* Github.authorization type added
 * Github.handler type added
 * Github.Message exception added and raised when GitHub returns an API error
 * API.string_of_message added for human consumption of structured errors
